--- a/Styles/region-grid.css
+++ b/Styles/region-grid.css
@@ -195,7 +195,7 @@
   image-rendering: pixelated;
   background-color: transparent;
   scale : 1;
-  filter: saturate(1.3) brightness(1.15);
+  filter: saturate(1.3) brightness(1.15)  url(#pixelate);
 }
 
 #region-grid-filter {
@@ -2559,7 +2559,7 @@ background: linear-gradient(180deg, rgb(146, 12, 12) 0%, rgb(131, 7, 7) 100%);
   left: 0;
   position: absolute;
   z-index: 1;
-  filter: brightness(0.9) contrast(1) url(#pixelate);
+  filter: brightness(0.9) contrast(1);
   pointer-events: none;
   transform-style: preserve-3d;
   background-size: 100dvw 100dvw;
