--- a/Templates/settings.html
+++ b/Templates/settings.html
@@ -173,4 +173,9 @@
         <div class="key">X</div>
         <div class="function">Toggle Cheats</div>
     </div>
+
+    <div class="control">
+        <div class="key">P</div>
+        <div class="function">Toggle Retro Filters</div>
+    </div>
 </div>
