--- a/Templates/settings.html
+++ b/Templates/settings.html
@@ -126,11 +126,11 @@
 
     <div class="control">
         <div class="key">Wheel</div>
-        <div class="function">Select/Manage Adventurers</div>
+        <div class="function">Select/Manage Adventurers [click: toggle UI]</div>
     </div>
 
     <div class="control">
-        <div class="key">W</div>
+        <div class="key">WASD</div>
         <div class="function">Movement</div>
     </div>
 
