--- a/Templates/adv-option.html
+++ b/Templates/adv-option.html
@@ -34,7 +34,7 @@
     </div>
     </details>
     
-    <details name="toclose" open=""><summary class="options"><div class="title">Options</div></summary>
+    <details name="toclose" open="" id="optionsAdv"><summary class="options"><div class="title">Options</div></summary>
     <div class="container">
     
         <button class="option" id="remove">Banish from group</button>
