--- a/Templates/settings.html
+++ b/Templates/settings.html
@@ -26,8 +26,8 @@
 
         <div class="parameter">
             <div class="slidecontainer">
-                <input type="range" min="0" max="150" value="25" class="slider-settings" id="visibility">
-                <div id="visibility-output">25</div>
+                <input type="range" min="0" max="150" value="52" class="slider-settings" id="visibility">
+                <div id="visibility-output">52</div>
             </div>
         </div>
 
@@ -66,8 +66,8 @@
 
         <div class="parameter">
             <div class="slidecontainer">
-                <input type="range" min="50" max="1500" value="800" class="slider-settings" id="grid-perspective">
-                <div id="grid-perspective-output">800</div>
+                <input type="range" min="5" max="60" value="20" class="slider-settings" id="grid-perspective">
+                <div id="grid-perspective-output">20</div>
             </div>
         </div>
 
@@ -87,12 +87,12 @@
     <div class="setting">
 
         <div class="title">
-            Posterization Filter
+            Retro Filter
         </div>
 
         <div class="parameter">
             <input type="checkbox" id="posterization" name="posterization" value="posterization" checked>
-            <label for="posterization" id="posterization-toggle"> Toggle Posterize Effect</label>
+            <label for="posterization" id="posterization-toggle"> Toggle Retro Filters</label>
         </div>
 
     </div>
@@ -106,7 +106,7 @@
         </div>
 
         <div class="parameter">
-            <input type="checkbox" id="animations" name="animations" value="animations">
+            <input type="checkbox" id="animations" name="animations" value="animations" checked>
             <label for="animations" id="animations-toggle"> Toggle Animations</label>
         </div>
 
