--- a/Styles/group-sheet.css
+++ b/Styles/group-sheet.css
@@ -196,7 +196,9 @@ padding-bottom: 5px;
     font-size: 20px;
     height: max-content;
     transform-origin: top;
-    width: 100%;
+    width: 350px;
+    left: 81%;
+    top: 78%;  
 }
 
 #adventurer-option-container .wrapper {
