--- a/Styles/adventurer-info-style.css
+++ b/Styles/adventurer-info-style.css
@@ -4,11 +4,10 @@
     border: 1px solid black;
     background-color: transparent;
     font-size: 18px;
-	  box-shadow: 2px 4px 20px rgba(0, 0, 0, 1);
-	  z-index: 9999;
+	box-shadow: 2px 4px 20px rgba(0, 0, 0, 1);
+	z-index: 9999;
     pointer-events: none;
     transform : translate(10%, 1%);
-    text-rendering: geometricPrecision;
     transition: opacity 0.1s allow-discrete ease-in-out;
     backdrop-filter: blur(8px);
 }
@@ -20,7 +19,6 @@
     flex-direction: row;
     font-size: 16px;
     text-align: left;
-    font-family: 'Domine', serif;
     text-shadow: 0px 0px 1px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1);
     align-content: flex-start;
     justify-content: flex-start;
@@ -30,7 +28,6 @@
     background-repeat:   no-repeat;
     background-position: top center;
     font-smooth: never;
-    text-rendering: geometricPrecision;
 }
 
 #close-button {
@@ -81,9 +78,7 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 0%, #e7e7e741 100%);
     gap: 0px;
     text-align: center;
 	cursor: move;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+  user-select: none;
 }
 .adventurer-info .Title {
     text-shadow: 0 0 2px black, 0 0 2px black, 0 0 5px black, 0 0 7px black;
