--- a/Styles/style_group_class_selection.css
+++ b/Styles/style_group_class_selection.css
@@ -670,7 +670,7 @@ color: orange;
   }
 
   #confirm-area button#Shuffle {
-display: none;
+    display: none;
   }
 
   #confirm-area button:enabled:hover {
@@ -682,8 +682,8 @@ display: none;
   #confirm-area button:enabled:active {
     color: darkgray;
     filter: brightness(0.8);
-    box-shadow: none;
-    transform: scale(0.95);
+    box-shadow: 0 0 5px black;
+    transform: scale(0.98);
   }
 
 
