--- a/Styles/region-grid.css
+++ b/Styles/region-grid.css
@@ -462,23 +462,22 @@ contain-intrinsic-size: 1px 5000px;
   }
 
   #region-grid-container.snow #engine-wrapper::after {
-    transition: all 2s;
+    transition: all 1s;
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%; 
+    left: 0%;
+    width: 100%;
     height: 100%;
     pointer-events: none;
     content: '';
     z-index: 1;
-    background-image: url(../Art/Sprites/preview_medium.gif);
-    background-size: 8dvw 8dvw; 
-    background-repeat: repeat;
-    opacity: 0.8 ;
-    filter: saturate(0) brightness(1.5) contrast(1.7);
+    background-image: url(../Art/Textures/snow.gif);
+    background-size: cover;
+    opacity: 0.18;
+    filter: saturate(0) brightness(2) contrast(1.7);
     image-rendering: pixelated;
     animation: rainAppear 2s ease-in 1;
-    background-color: rgba(113, 99, 167, 0.438);
+    background-color: rgba(19, 4, 75, 0.85);
   }
 
   @keyframes snowFall {
